--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,12 @@
 .App {
   text-align: center;
+  color:red;
+  background-image: url('./images/background-4.jpeg');
+  height: 150vh;
+  background-repeat: no-repeat;
+  background-size: contain;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
@@ -35,4 +36,22 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.hidden {
+  opacity: 0;
+
+}
+
+.visible{
+  opacity: 1;
+  border: 1px solid black;
+  width: 250px;
+  height: 250px;
+  margin: 500px auto;
+  background-color: red;
+}
+
+.test-one{
+  
 }
