--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,5 @@
 .App {
   text-align: center;
-  color:red;
   background-image: url('./images/background-4.jpeg');
   height: 150vh;
   background-repeat: no-repeat;
@@ -38,20 +37,29 @@
   }
 }
 
-.hidden {
-  opacity: 0;
-
+.speech-bubble {
+	position: relative;
+	background: rgba(206, 55, 130, 0.3);
+  border-radius: .4em;
+  width: 15vw;
+  height: auto;
+  top: 30em;
+  left: 63%;
+  color: rgb(120,12,62);
+  padding: 10px 0;
 }
 
-.visible{
-  opacity: 1;
-  border: 1px solid black;
-  width: 250px;
-  height: 250px;
-  margin: 500px auto;
-  background-color: red;
-}
-
-.test-one{
-  
+.speech-bubble:after {
+	content: '';
+	position: absolute;
+	bottom: 0;
+	left: 50%;
+	width: 0;
+	height: 0;
+	border: 20px solid transparent;
+	border-top-color: rgba(206, 55, 130, 0.3);
+	border-bottom: 0;
+	border-left: 0;
+	margin-left: -10px;
+	margin-bottom: -20px;
 }
