post-it's added

--- a/src/App.css
+++ b/src/App.css
@@ -1,92 +1,117 @@
+
 .App {
-  text-align: center;
-  background-image: url('./images/background-4.jpeg');
-  height: 150vh;
-  background-repeat: no-repeat;
-  background-size: contain;
-}
-
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+    text-align: center;
+    background-image: url('./images/background-4.jpeg');
+    height: 150vh;
+    background-repeat: no-repeat;
+    background-size: contain;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-.speech-bubble {
-	position: relative;
-	background: rgba(206, 55, 130, 0.3);
-  border-radius: .4em;
-  width: 15vw;
-  height: auto;
-  /* top: 20em;
-  left: 20em; */
-  color: rgb(120,12,62);
-  padding: 10px 0;
-}
-
-
-
-.speech-bubble:after {
-	content: '';
-	position: absolute;
-	bottom: 0;
-	left: 50%;
-	width: 0;
-	height: 0;
-	border: 20px solid transparent;
-	border-top-color: rgba(206, 55, 130, 0.3);
-	border-bottom: 0;
-	border-left: 0;
-	margin-left: -10px;
-	margin-bottom: -20px;
-}
-
-.text-div{
-  max-width: 30vw;
-  margin: 0 auto;
-  padding: 0 30px;
-  box-sizing: border-box;
-  border: 1px solid black;
-  position: relative;
-  top: 25em;
   
-}
+  
+  @media (prefers-reduced-motion: no-preference) {
+    .App-logo {
+      animation: App-logo-spin infinite 20s linear;
+    }
+  }
+  
+  .App-header {
+    background-color: #282c34;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+    color: white;
+  }
+  
+  .App-link {
+    color: #61dafb;
+  }
+  
+  @keyframes App-logo-spin {
+    from {
+      transform: rotate(0deg);
+    }
+    to {
+      transform: rotate(360deg);
+    }
+  }
+  
+  .speech-bubble {
+      position: relative;
+      background: rgba(206, 55, 130, 0.3);
+    border-radius: .4em;
+    width: 15vw;
+    height: auto;
+    top: 0em;
+    left: 20em;
+    color: rgb(120,12,62);
+    padding: 10px 0;
+  }
+  
+  
+  
+  .speech-bubble:after {
+      content: '';
+      position: absolute;
+      bottom: 0;
+      left: 50%;
+      width: 0;
+      height: 0;
+      border: 20px solid transparent;
+      border-top-color: rgba(206, 55, 130, 0.3);
+      border-bottom: 0;
+      border-left: 0;
+      margin-left: -10px;
+      margin-bottom: -20px;
+  }
+  
+  .text-div{
+    max-width: 40vw;
+    margin: 0 auto;
+    padding: 0 30px;
+    box-sizing: border-box;
+    /* border: 1px solid black; */
+    top: 40px;
+    position: relative;
+    padding-top: 80px;
+    padding-left: 70px;
+    display: flex;
+    flex-wrap: wrap;
+  }
+  
+  
+  .notebook{
+    box-sizing: border-box;
+    height: 94vh;
+    width: 34%;
+    position: absolute;
+    top: 8em;
+    left: 60em;
+    padding-top: 40px;
+    /* border: 1px solid black; */
+  }
+   
+  .post-it-1{
+    background-image: url('./images/post-it.png');
+    height: 25vh;
+    background-repeat: no-repeat;
+    /* border: 1px solid black; */
+    width: 45%;
+    background-size: contain;
+    
+  }
 
-
-.notebook{
-  box-sizing: border-box;
-  height: 94vh;
-  width: 34%;
-  position: absolute;
-  top: 8em;
-  left: 60em;
-  padding-top: 40px;
-  border: 1px solid black;
-}
-
-
+  .post-it-2{
+    background-image: url('./images/post-it.png');
+    height: 25vh;
+    background-repeat: no-repeat;
+    /* border: 1px solid black; */
+    width: 45%;
+    background-size: contain;
+    margin-left: 40px;
+  }
