--- a/src/App.css
+++ b/src/App.css
@@ -1,285 +1,283 @@
-
 .App {
-    text-align: center;
-    background-image: url('./images/background-4.jpeg');
-    height: 120vh;
-    background-repeat: no-repeat;
-    background-size: contain;
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  text-align: center;
+  background-image: url('./images/background-4.jpeg');
+  height: 120vh;
+  background-repeat: no-repeat;
+  background-size: contain;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
   }
-  
-  
-  @media (prefers-reduced-motion: no-preference) {
-    .App-logo {
-      animation: App-logo-spin infinite 20s linear;
-    }
+}
+
+.App-header {
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+.App-link {
+  color: #61dafb;
+}
+
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
   }
-  
-  .App-header {
-    background-color: #282c34;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-size: calc(10px + 2vmin);
-    color: white;
+  to {
+    transform: rotate(360deg);
   }
+}
+
+.speech-bubble {
+  position: relative;
+  background: rgba(206, 55, 130, 0.3);
+  border-radius: .4em;
+  width: 15vw;
+  height: auto;
+  top: 0em;
+  left: 18em;
+  color: rgb(120,12,62);
+  padding: 10px 0;
+}
+
+
+
+.speech-bubble:after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    width: 0;
+    height: 0;
+    border: 20px solid transparent;
+    border-top-color: rgba(206, 55, 130, 0.3);
+    border-bottom: 0;
+    border-left: 0;
+    margin-left: -10px;
+    margin-bottom: -20px;
+}
+
+.text-div{
+  max-width: 40vw;
+  margin: 0 auto;
+  box-sizing: border-box;
+  /* border: 1px solid black; */
+  top: 40px;
+
+  padding-top: 80px;
+  padding-left: 80px;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+
+.notebook{
+  box-sizing: border-box;
+  height: 94vh;
+  width: 34%;
+  position: absolute;
+  top: 8em;
+  left: 46em;
   
-  .App-link {
-    color: #61dafb;
-  }
+  padding-top: 40px;
+  /* border: 1px solid black; */
+}
+ 
+.post-it-1{
+  background-image: url('./images/post-it.png');
+  height: 25vh;
+  background-repeat: no-repeat;
+  /* border: 1px solid black; */
+  width: 45%;
+  background-size: contain;
   
-  @keyframes App-logo-spin {
-    from {
-      transform: rotate(0deg);
-    }
-    to {
-      transform: rotate(360deg);
-    }
-  }
-  
-  .speech-bubble {
-      position: relative;
-      background: rgba(206, 55, 130, 0.3);
-    border-radius: .4em;
-    width: 15vw;
-    height: auto;
-    top: 0em;
-    left: 20em;
-    color: rgb(120,12,62);
-    padding: 10px 0;
-  }
-  
-  
-  
-  .speech-bubble:after {
-      content: '';
-      position: absolute;
-      bottom: 0;
-      left: 50%;
-      width: 0;
-      height: 0;
-      border: 20px solid transparent;
-      border-top-color: rgba(206, 55, 130, 0.3);
-      border-bottom: 0;
-      border-left: 0;
-      margin-left: -10px;
-      margin-bottom: -20px;
-  }
-  
-  .text-div{
-    max-width: 40vw;
-    margin: 0 auto;
-    padding: 0 30px;
-    box-sizing: border-box;
-    /* border: 1px solid black; */
-    top: 40px;
-    position: relative;
-    padding-top: 80px;
-    padding-left: 70px;
+}
+
+.post-it-2{
+  background-image: url('./images/post-it.png');
+  height: 25vh;
+  background-repeat: no-repeat;
+  /* border: 1px solid black; */
+  width: 45%;
+  background-size: contain;
+  margin-left: 40px;
+}
+
+h3{
+    margin: 80px auto;
+    font-size: 15px;
+}
+
+
+
+.post-it-1:hover, .post-it-2:hover{
+  animation: shake 0.5s;
+  animation-iteration-count: infinite;
+  color: rgb(60,43,144);
+  cursor: pointer;
+}
+
+@keyframes shake {
+  0% { transform: translate(1px, 1px) rotate(0deg); }
+  10% { transform: translate(-1px, -2px) rotate(-1deg); }
+  20% { transform: translate(-3px, 0px) rotate(1deg); }
+  30% { transform: translate(3px, 2px) rotate(0deg); }
+  40% { transform: translate(1px, -1px) rotate(1deg); }
+  50% { transform: translate(-1px, 2px) rotate(-1deg); }
+  60% { transform: translate(-3px, 1px) rotate(0deg); }
+  70% { transform: translate(3px, 1px) rotate(-1deg); }
+  80% { transform: translate(-1px, -1px) rotate(1deg); }
+  90% { transform: translate(1px, 2px) rotate(0deg); }
+  100% { transform: translate(1px, -2px) rotate(-1deg); }
+}
+
+
+.bio, .coder-cat{
+    width: 100%;
     display: flex;
     flex-wrap: wrap;
-  }
-  
-  
-  .notebook{
-    box-sizing: border-box;
-    height: 94vh;
-    width: 34%;
-    position: absolute;
-    top: 8em;
-    left: 60em;
-    padding-top: 40px;
-    padding-left: 10px;
-    /* border: 1px solid black; */
-  }
-   
-  .post-it-1{
-    background-image: url('./images/post-it.png');
-    height: 25vh;
-    background-repeat: no-repeat;
-    /* border: 1px solid black; */
-    width: 45%;
-    background-size: contain;
-    
-  }
-
-  .post-it-2{
-    background-image: url('./images/post-it.png');
-    height: 25vh;
-    background-repeat: no-repeat;
-    /* border: 1px solid black; */
-    width: 45%;
-    background-size: contain;
-    margin-left: 40px;
-  }
-
-  h3{
-      margin: 100px auto;
-  }
-
- 
-
-  .post-it-1:hover, .post-it-2:hover{
-    animation: shake 0.5s;
-    animation-iteration-count: infinite;
-    color: rgb(60,43,144);
-    cursor: pointer;
-  }
-
-  @keyframes shake {
-    0% { transform: translate(1px, 1px) rotate(0deg); }
-    10% { transform: translate(-1px, -2px) rotate(-1deg); }
-    20% { transform: translate(-3px, 0px) rotate(1deg); }
-    30% { transform: translate(3px, 2px) rotate(0deg); }
-    40% { transform: translate(1px, -1px) rotate(1deg); }
-    50% { transform: translate(-1px, 2px) rotate(-1deg); }
-    60% { transform: translate(-3px, 1px) rotate(0deg); }
-    70% { transform: translate(3px, 1px) rotate(-1deg); }
-    80% { transform: translate(-1px, -1px) rotate(1deg); }
-    90% { transform: translate(1px, 2px) rotate(0deg); }
-    100% { transform: translate(1px, -2px) rotate(-1deg); }
-  }
-
- 
-  .bio, .coder-cat{
-      width: 100%;
-      display: flex;
-      flex-wrap: wrap;
-      margin: 0;
-      padding: 4em;
-  }
-
-  .coder-cat{
-    justify-content: space-between; 
-    padding-right: 4em;
-    height: 45vh;
-    background-color:rgba(195,126,243, 0.8);
-  }
-  .bio img{
-     width: 30%;
-     height: auto;
-  }
-
-  .coder-cat img{
-    width: 40%;
-  }
-  .bio .text, .coder-cat .text{
-    /* width: auto; */
-      color: white;
-      padding-left: 5em;
-    
-    }
-
-  .x{
-      position: absolute;
-      height: 30px;
-      width: 30px;
-      top: 0;
-      right: 0;
-      border-radius: 0 0 0 10px;
-      font-size: 15px;
-      
-  }
-
-  #flying-2{
-    
-    box-sizing: border-box;
-    width: 100%; 
-    background-color: rgba(2,151,219, 0.8) !important;
-  } 
-
- #flying-2 .text{
-     box-sizing: border-box;
-     margin: 0;
-     text-align: center;
-    
-  }
-
-  #flying-2 img{
-    float: left;
-    height: 20vh;
-    box-sizing: border-box;
-    margin-top: 0;
-    width: 50%;
-  }
-
-  .h3{
     margin: 0;
-    padding: 0;
-  }
+    padding: 4em;
+}
 
-  .text-container{
-    position: relative;
-    box-sizing: border-box;
-    width: auto;
+.coder-cat{
+  justify-content: space-between; 
+  padding-right: 4em;
+  height: 45vh;
+  background-color:rgba(195,126,243, 0.8);
+}
+.bio img{
+   width: 30%;
+   height: auto;
+}
 
-     height: 15vh;
-     overflow: scroll;
+.coder-cat img{
+  width: 40%;
+}
+.bio .text, .coder-cat .text{
+  /* width: auto; */
+    color: white;
+    padding-left: 5em;
   
   }
 
+.x{
+    position: absolute;
+    height: 30px;
+    width: 30px;
+    top: 0;
+    right: 0;
+    border-radius: 0 0 0 10px;
+    font-size: 15px;
+    
+}
 
-  .awssld__content{
-    background-color: rgba(239,166,172, 0.8) !important; 
-    border-radius: 15px;
-    padding: 0 !important;
-  }
-
-
-  .awssld__bullets{
-    position: relative !important;
-   bottom: 40px !important;
-  }
- 
-  .ruby-img{
-     width: 100%;
-  }
-
-  .rails-img, .redux-img{
-    width: 80%;
-  }
-
-  .css-img{
-    height: 60vh;
-  }
-
-  .mq-img, .sqlite-img{
-    width: 90%;
-  }
- 
-  .linked-in-div{
-    padding: 5em 10em;
-    /* padding: 50px 50px 50px 150px; */
-    margin: 50px auto;
-    display: flex;
-
-   
-  }
-
-  .linked-in-div a{
-    display: block;
-    width: 100%;
-  }
+#flying-2{
   
-  .linked-in-div a img{
-    width: 100%;
-  }
+  box-sizing: border-box;
+  width: 100%; 
+  background-color: rgba(2,151,219, 0.8) !important;
+} 
 
-  @media (prefers-reduced-motion: no-preference) {
-    .linked-in-div a img:hover {
-      animation: img-spin infinite 1s linear;
-    }
-  }
+#flying-2 .text{
+   box-sizing: border-box;
+   margin: 0;
+   text-align: center;
+  
+}
 
-  @keyframes img-spin {
-    from {
-      transform: rotate(0deg);
-    }
-    to {
-      transform: rotate(360deg);
-    }
+#flying-2 img{
+  float: left;
+  height: 20vh;
+  box-sizing: border-box;
+  margin-top: 0;
+  width: 50%;
+}
+
+.h3{
+  margin: 0;
+  padding: 0;
+}
+
+/* .text-container{
+  position: relative;
+  box-sizing: border-box;
+  width: auto;
+   height: 15vh;
+   overflow: scroll;
+
+}
+ */
+
+.awssld__content{
+  background-color: rgba(239,166,172, 0.8) !important; 
+  border-radius: 15px;
+  padding: 0 !important;
+}
+
+
+.awssld__bullets{
+  position: relative !important;
+ bottom: 40px !important;
+}
+
+.ruby-img{
+   width: 100%;
+}
+
+.rails-img, .redux-img{
+  width: 80%;
+}
+
+.css-img{
+  height: 60vh;
+}
+
+.mq-img, .sqlite-img{
+  width: 90%;
+}
+
+.linked-in-div{
+  padding: 5em 10em;
+  /* padding: 50px 50px 50px 150px; */
+  margin: 50px auto;
+  display: flex;
+
+ 
+}
+
+.linked-in-div a{
+  display: block;
+  width: 100%;
+}
+
+.linked-in-div a img{
+  width: 100%;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .linked-in-div a img:hover {
+    animation: img-spin infinite 1s linear;
   }
+}
+
+@keyframes img-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
