--- a/src/App.css
+++ b/src/App.css
@@ -281,3 +281,37 @@ h3{
     transform: rotate(360deg);
   }
 }
+
+
+/* !!! RESPONSIVE !!!*/
+
+@media screen and (max-width: 414px){
+  .notebook{
+    width: 100%;
+   height: 50vh;
+   left: 10em;
+   top: 0em;
+  }
+
+  .text-div{
+
+  }
+
+  .speech-bubble{
+    width: 15%;
+    padding-top: 1px;
+    left: 8em;
+    height: 10px;
+    /* box-sizing: border-box; */
+  }
+
+  .speech-bubble h2{
+    font-size: 10px;
+    margin:0;
+  }
+
+  .speech-bubble:after{
+    display: none;
+  }
+
+}
