--- a/src/App.css
+++ b/src/App.css
@@ -231,17 +231,48 @@ body {
 }
 
 .table{
-  width: 350px;
+  width: 450px;
   height: 160px;
+
   background: #5E3023;
   clip-path: polygon(25% 0%, 100% 0%, 83% 53%, 0 54%);
   position: relative;
-  left: 160px;
+  left: 100px;
   top: -120px;
   z-index: -1;
 }
 
-.table-leg-1, .table-leg-2, .table-leg-3, .table-leg-4{
+.table-front{
+  border-width: 0 3px 0 3px;
+  border-color: #5E3023;
+  border-style: solid;
+  width:368px;
+  height: 130px;
+  background: #8E403E;
+  position: absolute;
+  top: 465px;
+  left: 152px;
+}
+
+.table-side{
+  
+  /* clip-path: polygon(0 31%, 100% 0, 100% 63%, 0 100%); */
+  clip-path: polygon(0 47%, 59% 15%, 59% 64%, 0 100%);
+  /* clip-path: polygon(0 47%, 59% 17%, 59% 64%, 0 100%); */
+
+
+  width:128px;
+  height: 248px;
+
+  background: #8E403E;
+  position: absolute;
+  top: 347px;
+  left: 520px;
+  z-index: -1;
+
+}
+
+/* .table-leg-1, .table-leg-2, .table-leg-3, .table-leg-4{
   width: 10px;
   height: 140px;
   background:#5E3023;
@@ -250,23 +281,23 @@ body {
 .table-leg-1{
   position: absolute;
   top: 460px;
-  left: 220px;
+  left: 180px;
 }
 
 .table-leg-2{
   position: absolute;
   top: 400px;
-  left: 290px;
+  left: 250px;
 }
 
 .table-leg-3{
   position: absolute;
   top: 460px;
-  left: 490px;
+  left: 500px;
 }
 
 .table-leg-4{
   position: absolute;
   top: 395px;
-  left: 538px;
-}
+  left: 570px;
+} */
