--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
 
 body {
   text-align: center;
-  background: #FF6978;
+  background: #BC7C9C;
   z-index: -1;
   width: 100%;
   height: 150vh; 
@@ -186,7 +186,7 @@ body {
   left: 30px;
 }
 
-.message{
+/* .message{
   clip-path: polygon(0% 0%, 100% 0%, 100% 75%, 59% 75%, 23% 100%, 32% 75%, 0% 75%);
   position: absolute;
   background: white;
@@ -198,7 +198,7 @@ body {
   padding-left: 10px;
   padding-top: 10px;
   box-sizing: border-box;
-}
+} */
 
 .computer{
   width: 145px;
@@ -252,18 +252,15 @@ body {
   position: absolute;
   top: 465px;
   left: 152px;
+  -webkit-box-shadow: -4px -27px 40px -25px rgba(0,0,0,0.75);
+-moz-box-shadow: -4px -27px 40px -25px rgba(0,0,0,0.75);
+box-shadow: -4px -27px 40px -25px rgba(0,0,0,0.75);
 }
 
 .table-side{
-  
-  /* clip-path: polygon(0 31%, 100% 0, 100% 63%, 0 100%); */
   clip-path: polygon(0 47%, 59% 15%, 59% 64%, 0 100%);
-  /* clip-path: polygon(0 47%, 59% 17%, 59% 64%, 0 100%); */
-
-
   width:128px;
   height: 248px;
-
   background: #8E403E;
   position: absolute;
   top: 347px;
@@ -272,32 +269,14 @@ body {
 
 }
 
-/* .table-leg-1, .table-leg-2, .table-leg-3, .table-leg-4{
-  width: 10px;
-  height: 140px;
-  background:#5E3023;
+.chair{
+  width: 180px;
+  height: 100px;
+  background:#0A3200;
+  position: absolute;
+  top:280px;
+  left: 310px;
+  z-index: -1;
+  border-radius: 15px 15px 0 0 ;
 }
 
-.table-leg-1{
-  position: absolute;
-  top: 460px;
-  left: 180px;
-}
-
-.table-leg-2{
-  position: absolute;
-  top: 400px;
-  left: 250px;
-}
-
-.table-leg-3{
-  position: absolute;
-  top: 460px;
-  left: 500px;
-}
-
-.table-leg-4{
-  position: absolute;
-  top: 395px;
-  left: 570px;
-} */
