--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
 
 body {
   text-align: center;
-  background: #BC7C9C;
+  background: #C4BAD6;
   z-index: -1;
   width: 100%;
   height: 150vh; 
@@ -301,7 +301,7 @@ box-shadow: -2px 5px 3px -2px rgba(0,0,0,0.75);
   z-index: 1;
   top: 380px;
   left: 260px;
-  border-radius: 0 0  10px 10px;
+  border-radius:13px 13px  10px 10px;
   /* border-bottom: 10px solid black; */
   -webkit-box-shadow: -6px 11px 16px -2px rgba(0,0,0,0.75);
 -moz-box-shadow: -6px 11px 16px -2px rgba(0,0,0,0.75);
@@ -324,9 +324,34 @@ box-shadow: -1px 4px 3px -2px rgba(0,0,0,0.75);
   content: "";
   display: inline-block;
   height: 6px;
-  width: 30px;
+  width: 22px;
   background: rgb(112,88,64);
   border-radius: 50%;
   position: relative;
-  top: -12px;
+  top: -7px;
+}
+
+.coffee-steam, .coffee-steam:after{
+  text-decoration-line: overline underline;
+  text-decoration-style: wavy;
+  width:15px;
+  height: 20px;
+  border-radius: 50%;
+  border-width: 1px;
+  border-style: solid;
+  position: absolute;
+  top:360px;
+  left: 273px;
+
+  border-color:transparent transparent transparent #d6d2d2;
+
+}
+
+.coffee-steam:after{
+  content:"";
+  display: inline-block;
+  position: relative;
+  top: -8px;
+  left: -11px;
+  border-color:transparent #d6d2d2 transparent transparent;
 }
