--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
 
 body {
   text-align: center;
-  background: #C4BAD6;
+  /* background: #C99854; */
   z-index: -1;
   width: 100%;
   height: 150vh; 
@@ -24,6 +24,15 @@ body {
   background: #86A9CA;
   z-index: -1;
 } */
+.wall{
+  width: 100%;
+  height: 40vh;
+  background: #C4BAD6;;
+  z-index: -1;
+  position: absolute;
+  top:0;
+  left: 0;
+}
 
 .circle{
   padding: 50px;
@@ -355,3 +364,26 @@ box-shadow: -1px 4px 3px -2px rgba(0,0,0,0.75);
   left: -11px;
   border-color:transparent #d6d2d2 transparent transparent;
 }
+
+.floor{
+  background: #C99854;
+  width: 100%;
+  height: 100vh;
+  position: absolute;
+  top: 0px;
+  left: 0;
+  z-index: -2;
+  border: 2px solid black;
+  display: flex;
+  justify-content: space-between;
+}
+
+.floor-line{
+  width: 70px;
+  height: 109vh;
+  border-width: 0 4px 0 0;
+  border-color: #75371F;
+  border-style: groove;
+  transform: rotate(39deg);
+}
+
