--- a/src/App.css
+++ b/src/App.css
@@ -387,3 +387,16 @@ box-shadow: -1px 4px 3px -2px rgba(0,0,0,0.75);
   transform: rotate(39deg);
 }
 
+.first{
+  height: 80vh;
+  position: relative;
+  top: 250px;
+  left: -80px;
+}
+
+.second{
+  height: 50vh;
+  position: relative;
+  top: 510px;
+  left: -150px;
+}
