--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,10 @@ body {
   
 }
 
+ul li{
+  list-style: none;
+}
+
 .wall{
   width: 100%;
   height: 40vh;
@@ -255,7 +259,7 @@ ul li{
   left: 30px;
 }
 
-/* .message{
+.message{
   clip-path: polygon(0% 0%, 100% 0%, 100% 75%, 59% 75%, 23% 100%, 32% 75%, 0% 75%);
   position: absolute;
   background: white;
@@ -267,7 +271,7 @@ ul li{
   padding-left: 10px;
   padding-top: 10px;
   box-sizing: border-box;
-} */
+}
 
 .computer{
   width: 145px;
@@ -435,6 +439,71 @@ box-shadow: -1px 4px 3px -2px rgba(0,0,0,0.75);
   top: -8px;
   left: -11px;
   border-color:transparent #d6d2d2 transparent transparent;
+}
+
+.cabinet{
+  width: 700px;
+  height: 500px;
+  background: #8e403f;
+  position: absolute;
+  top: 150px;
+  left: 900px;
+}
+
+.cabinet:before{
+  display: inline-block;
+  content: "";
+  clip-path: polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%);
+ position: relative;
+ top: -60px;
+  background: #5d3023;
+  width: 935px;
+  height: 60px
+
+}
+
+.cabinet:after{
+  clip-path: polygon(0 14%, 100% 4%, 100% 79%, 0% 100%);
+
+  display: inline-block;
+  content: "";
+  background: #5d3023;
+  width: 235px;
+  height: 583px;
+  position: relative;
+  top: -146px;
+  left: 465px;
+  /* transform: rotate(-1deg); */
+}
+
+.cabinet-line{
+  width: 10px;
+  height: 500px;
+  background: #572f2f;
+  position: absolute;
+  left: 230px;
+  top: 0;
+}
+
+.shelf-1{
+  width: 700px;
+  height: 10px;
+  background: #572f2f;
+  position: absolute;
+  top: 130px;
+  margin-bottom: 20px;
+}
+
+.shelf-1:before{
+  clip-path: polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%);
+  width: 920px;
+  height: 60px;
+  display: inline-block;
+  content: "";
+  background: #5d3023;
+  position: absolute;
+  top: -60px;
+  left: 5px;
 }
 
 .floor{
