--- a/src/App.css
+++ b/src/App.css
@@ -8,11 +8,11 @@ body {
   text-align: center;
   z-index: -1;
   width: 100%;
-  height: 150vh; 
+  /* height: 150vh;  */
   margin: 0;
   padding: 0;
   background:  
-  #d8a08d;
+  #84cce4;
 }
 
 ul li{
@@ -29,16 +29,17 @@ ul li{
   position: absolute;
   background: #f8da67;
   left: 330px;
-  top: 110px;
+  top: 160px;
   border-radius:90px 90px 35px 35px ;
 }
 
 .head{
   height: 135px;
   width: 100px;
-  background: #DDAD96;
-  margin-left: 300px;
-  margin-top: 100px;
+  background: #dbaf9e;
+  position: relative;
+  left:300px;
+  top: 155px;
   border-radius: 0 0 60% 60%;
 }
 
@@ -60,9 +61,9 @@ ul li{
   width: 50px;
   height:45px;
   background: #f8da67;
-  position: absolute;
-  top: 140px;
-  left: 405px;
+  position: relative;
+  top: -145px;
+  left: 30px;
   border-radius: 0 0  90px 120px;
 }
 
@@ -163,6 +164,70 @@ ul li{
   left: -1px;
 }
 
+.left-ear, .right-ear{
+  width: 15px;
+  height: 30px;
+  background: #dbaf9e;
+  position: absolute;
+  top: 50px;
+  z-index: 2;
+  left: -9px;
+  border-radius: 50%;
+  transform: rotate(-5deg);
+}
+
+.right-ear{
+  left: 94px;
+  transform: rotate(5deg);
+}
+
+.left-ear:before, .left-ear:after, .right-ear:before, .right-ear:after{
+  content: "";
+  display: inline-block;
+  border-width: 0.5px;
+  border-style: solid;
+  border-color: rgba(115,103,74, 0.3) transparent rgba(115,103,74, 0.3)rgba(115,103,74, 0.3);
+  width: 9px;
+  height: 20px;
+  border-radius: 50%;
+  position: absolute;
+  left: 2px;
+  top: 3px;
+ 
+}
+
+
+.left-ear:after, .right-ear:after{
+  border-color: rgba(115,103,74, 0.3)  rgba(115,103,74, 0.3) transparent transparent ;
+  width: 3px;
+  height: 5px;
+  transform: rotate(-8deg);
+  top: 16.8px;
+  left: 6.4px;
+}
+
+.right-ear:before{
+  border-color: rgba(115,103,74, 0.3) rgba(115,103,74, 0.3)rgba(115,103,74, 0.3) transparent ;
+}
+
+.right-ear:after{
+  transform: rotate(8deg);
+  border-color: rgba(115,103,74, 0.3) transparent   transparent rgba(115,103,74, 0.3)  ;
+  top: 16.7px;
+  left: 3.5px;
+}
+
+.earing{
+  width: 3px;
+  height: 3px;
+  background: red;
+ border-radius: 50%;
+ position: relative;
+ top: 25px;
+ left: 5px;
+}
+
+
 .nose{
   height:5px;
   width: 10px;
@@ -211,21 +276,21 @@ ul li{
 .neck{
   width: 30px;
   height: 20px;
-  background:  #DDAD96;
+  background:  #dbaf9e;
   z-index: 1;
   position: relative;
   left: 335px;
-  top:-5px;
+  top:150px;
   border-radius: 0 0 15px 15px
 }
 
 .t-shirt{
   background: #DF3B57;
   width: 120px;
-  height: 90px;
-  position: relative;
-  left: 288px;
-  top: -16px;
+  height: 150px;
+  position: absolute;
+  left: 340px;
+  top: 340px;
   z-index: -1;
   border-radius: 40px 40px 0 0;
 }
@@ -235,7 +300,7 @@ ul li{
   display: inline-block;
   background:rgba(109,102,103, 0.4);
   width: 3px;
-  height: 30px;
+  height: 100px;
   position: relative;
   top: 50px;
   left: -30px;
@@ -266,7 +331,7 @@ ul li{
   background:#BFC0C0;
   position: relative;
   left:275px;
-  top: -80px;
+  top: 170px;
   box-shadow:
     inset 10px 0 50px rgb(70, 64, 70),
     inset -60px 0 120px rgb(153, 156, 156);
@@ -288,32 +353,67 @@ ul li{
 .table{
   width: 470px;
   height: 40px;
-  background: #744f25;
+  /* background: #815136; */
+  background-color: #d4bf82;
+background-image: url("https://www.transparenttextures.com/patterns/wood-pattern.png");
   position: relative;
   left: 90px;
-  top: -80px;
+  top: 170px;
   z-index: 1;
+  -webkit-box-shadow: 0px 13px 10px -3px rgba(0,0,0,0.6);
+  -moz-box-shadow: 0px 13px 10px -3px rgba(0,0,0,0.6);
+  box-shadow: 0px 13px 10px -3px rgba(0,0,0,0.6);
 }
 
 .table-front{
   width:450px;
   height: 230px;
-  background:  #a68866;
+  /* background:  #c5a754; */
   position: absolute;
-  top: 425px;
+  top: 505px;
   left: 150px;
-  
+  background-color: #d4bf82;
+background-image: url("https://www.transparenttextures.com/patterns/wood-pattern.png");
+-webkit-box-shadow: 5px 14px 12px -3px rgba(0,0,0,0.6);
+-moz-box-shadow: 5px 14px 12px -3px rgba(0,0,0,0.6);
+box-shadow: 5px 14px 12px -3px rgba(0,0,0,0.6);
+}
+
+
+.table-front:before, .table-front:after{
+  content: "";
+  display: inline-block;
+   width: 20px;
+   height: 15px;
+   position: relative;
+   top: 230px;
+   left: -200px;
+   background: black;
+   border-radius: 5px;
+   background: rgba(20,20,20,1);
+   background: -moz-linear-gradient(left, rgba(20,20,20,1) 0%, rgba(61,60,61,1) 18%, rgba(19,19,19,1) 32%, rgba(19,19,19,1) 40%);
+   background: -webkit-gradient(left top, right top, color-stop(0%, rgba(20,20,20,1)), color-stop(18%, rgba(61,60,61,1)), color-stop(32%, rgba(19,19,19,1)), color-stop(40%, rgba(19,19,19,1)));
+   background: -webkit-linear-gradient(left, rgba(20,20,20,1) 0%, rgba(61,60,61,1) 18%, rgba(19,19,19,1) 32%, rgba(19,19,19,1) 40%);
+   background: -o-linear-gradient(left, rgba(20,20,20,1) 0%, rgba(61,60,61,1) 18%, rgba(19,19,19,1) 32%, rgba(19,19,19,1) 40%);
+   background: -ms-linear-gradient(left, rgba(20,20,20,1) 0%, rgba(61,60,61,1) 18%, rgba(19,19,19,1) 32%, rgba(19,19,19,1) 40%);
+   background: linear-gradient(to right, rgba(20,20,20,1) 0%, rgba(61,60,61,1) 18%, rgba(19,19,19,1) 32%, rgba(19,19,19,1) 40%);
+   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#141414', endColorstr='#131313', GradientType=1 );
+   
+}
+
+.table-front:after{
+  left: 200px;
 }
 
 .chair{
   width: 180px;
   height: 150px;
-  background:#0A3200;
   position: absolute;
-  top:280px;
+  top:340px;
   left: 310px;
   z-index: -1;
   border-radius: 15px 15px 0 0 ;
+  background: #1f1e1f;
 }
 
 .coffee-bottom{
@@ -321,7 +421,7 @@ ul li{
  width: 50px;
  height: 5px;
  position: absolute;
- top: 410px;
+ top: 470px;
  left: 250px;
  border-radius: 50%;
  
@@ -333,7 +433,7 @@ ul li{
   width: 30px;
   position: absolute;
   z-index: 1;
-  top: 388px;
+  top: 450px;
   left: 260px;
   border-radius:5px 5px  10px 10px;
 }
@@ -360,11 +460,11 @@ ul li{
   border-width: 1px;
   border-style: solid;
   position: absolute;
-  top:365px;
+  top:430px;
   left: 273px;
 
   border-color:transparent transparent transparent 
-  #545b5f;
+  #828083;
 
 }
 
@@ -375,7 +475,7 @@ ul li{
   top: -8px;
   left: -11px;
   border-color:transparent 
-  #545b5f transparent transparent;
+  #828083 transparent transparent;
 }
 
 .post-it-1, .post-it-2, .post-it-3, .post-it-4{
@@ -420,7 +520,9 @@ ul li{
 }
 
 .postits p{
-  font-family: 'Indie Flower', cursive;
+  /* font-family: 'Indie Flower', cursive;
+   */
+   font-family: 'Cute Font', cursive;
   font-size: 25px;
   padding-top: 80px;
   font-weight: bold;
@@ -450,7 +552,18 @@ ul li{
 
 
 
-
+ .floor{
+   width: 100%;
+   height: 40vh;
+   position:absolute;
+   /* background: black;
+    */
+    background-image: url('./images/wooden-floor.jpg');
+   z-index: -10;
+   left: 0;
+   top: 630px;
+   background-size: cover;
+ }
 
 .bio, .coder-cat{
   width: 100%;
@@ -463,8 +576,6 @@ ul li{
 .coder-cat{
 justify-content: space-between; 
 padding-right: 4em;
-height: 45vh;
-
 }
 .bio img{
  width: 30%;
@@ -498,7 +609,7 @@ width: 40%;
 
 box-sizing: border-box;
 width: 100%; 
-background-color: rgba(2,151,219, 0.8) !important;
+/* background-color: rgba(2,151,219, 0.8) !important; */
 } 
 
 #flying-2 .text{
@@ -527,13 +638,13 @@ box-sizing: border-box;
 width: auto;
 
  height: 15vh;
- overflow: scroll;
+ /* overflow: scroll; */
 
 }
 
 
 .awssld__content{
-background-color: rgba(239,166,172, 0.8) !important; 
+background-color: #2E9497 !important; 
 border-radius: 15px;
 padding: 0 !important;
 }
@@ -548,11 +659,12 @@ bottom: 40px !important;
  width: 100%;
 }
 
+
 .rails-img, .redux-img{
 width: 80%;
 }
 
-.css-img{
+.css-img, .js-img{
 height: 75vh;
 }
 
