--- a/src/App.css
+++ b/src/App.css
@@ -591,6 +591,66 @@ background-image: url("https://www.transparenttextures.com/patterns/wood-pattern
   box-shadow: 0px 13px 10px -3px rgba(0,0,0,0.6);
 }
 
+.vase{
+  width: 35px;
+  height: 40px;
+  position: absolute;
+ background: #ddb8a6;
+ bottom: 26px;
+ left: 30px;
+ clip-path: polygon(0 0, 100% 0, 92% 65%, 8% 65%);
+}
+
+.vase-top{
+  width: 43px;
+  position: absolute;
+  top: -26px;
+  left: 26px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: #c4a393 transparent transparent transparent;
+ z-index: 2;
+}
+
+.vase-top:before{
+  content: "";
+  position: absolute;
+  top: -12px;
+  left: -5px;
+  display: inline-block;
+  width: 42.5px;
+  height: 7px;
+  background: #ddb8a6;
+}
+
+.plant ul li{
+position: relative;
+top: -53px;
+left: 28px;
+width: 20px;
+height:25px;
+border-left: 1px solid #195532;
+background: #2c8651;
+transform: rotate(15deg);
+border-radius: 10% 90px ;
+-webkit-box-shadow: -2px 5px 14px -3px rgba(0,0,0,0.75);
+-moz-box-shadow: -2px 5px 14px -3px rgba(0,0,0,0.75);
+box-shadow: -2px 5px 14px -3px rgba(0,0,0,0.75);
+}
+
+
+
+.plant ul li:nth-child(2){
+ left: 38px;
+ top: -83px;
+ transform: rotate(35deg);
+}
+
+.plant ul li:nth-child(3){
+top: -103px;
+left: 48px;
+transform: rotate(55deg);
+}
 .table-front{
   width:450px;
   height: 230px;
